[project]
name = "techcable.asdl"
description = "My fork of the ASDL code used in CPython"
license = "Python-2.0"
keywords = ["asdl", "cpython"]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.9"
version = "0.0.1.dev0"

[project.urls]
Source = "https://github.com/Techcable/pyasdl"

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asdl"]

